# Triton-distributed

./: CMakeLists.txt  README.md  build_scm.sh  code-format.sh
docs/: autotuner-cn.md  autotuner.md  build.md  conf.py  index.rst  prepare_nvshmem.md  testing.md
docs/getting-started/: installation.rst
docs/getting-started/e2e/: index.rst
docs/getting-started/megakernel/: index.rst
docs/getting-started/tutorials/: 01-distributed-notify-wait.rst  02-intra-node-allgather.rst  03-inter-node-allgather.rst  04-deepseek-infer-all2all.rst  05-intra-node-reduce-scatter.rst  06-inter-node-reduce-scatter.rst  07-overlapping-allgather-gemm.rst  08-overlapping-gemm-reduce-scatter.rst  09-AMD-overlapping-allgather-gemm.rst  10-AMD-overlapping-gemm-reduce-scatter.rst
docs/kernels/: index.rst
docs/kernels/amd/: all_gather_gemm.rst  gemm_allreduce.rst  gemm_reduce_scatter.rst  index.rst
docs/kernels/nvidia/: allgather.rst  allgather_gemm.rst  allreduce.rst  ep_a2a.rst  ep_a2a_intra_node.rst  ep_all2all_fused.rst  flash_decode.rst  gemm_allreduce.rst  gemm_reduce_scatter.rst  index.rst  low_latency_a2a_v2.rst  moe_reduce_ar.rst  moe_reduce_rs.rst  sp_ag_attention.rst  ulysses_sp.rst
docs/layers/: index.rst
docs/layers/amd/: index.rst  tp_attn.rst  tp_mlp.rst
docs/layers/nvidia/: ep_a2a_fused_layer.rst  ep_a2a_layer.rst  ep_ll_a2a_layer.rst  gemm_allreduce_layer.rst  index.rst  low_latency_allgather_layer.rst  pp_block.rst  sp_flash_decode.rst  tp_attn.rst  tp_mlp.rst  tp_moe.rst  ulysses_sp_a2a_layer.rst
docs/models/: config.rst  dense.rst  engine.rst  index.rst  kv_cache.rst  qwen_moe.rst
docs/python-api/: triton-dist.language.rst  triton-dist.semantics.rst
include/TritonDistributed/Conversion/TritonDistributedToLLVM/: CMakeLists.txt  Passes.td  TritonDistributedToLLVMPass.h
lib/Conversion/TritonDistributedToLLVM/: CMakeLists.txt  SIMTOpToLLVM.cpp
lib/Conversion/TritonDistributedToLLVM/METAX/: ConvertMETAXDistributedToLLVM.cpp  DistributedOpToLLVM.cpp
lib/Conversion/TritonDistributedToLLVM/NVIDIA/: DistributedOpToLLVM.cpp
lib/Conversion/TritonDistributedToTritonGPU/: CMakeLists.txt
lib/Conversion/TritonDistributedToTritonGPU/METAX/: TritonDistributedToTritonGPU.cpp
python/: build_helpers.py  setup.py
python/src/: ir.cc  passes.cc
python/triton_dist/: __init__.py  jit.py  nv_utils.py  profiler_utils.py  tune.py  utils.py
python/triton_dist/function/nvidia/: common.py  ep_moe_fused.py
python/triton_dist/kernels/: common_ops.py
python/triton_dist/kernels/amd/: __init__.py  allgather.py  allgather_gemm.py  gemm.py  perf_model.py
python/triton_dist/kernels/metax/: __init__.py  allgather_gemm.py  common_ops.py  utils.py
python/triton_dist/kernels/nvidia/: ep_all2all_fused.py  group_gemm.py  low_latency_allgather.py  memory_ops.py  swiglu.py
python/triton_dist/language/extra/: language_extra.py  libshmem_device.py
python/triton_dist/language/extra/hip/: language_extra.py
python/triton_dist/language/extra/maca/: __init__.py  language_extra.py  libmxshmem_device.py
python/triton_dist/layers/amd/: tp_attn.py  tp_mlp.py
python/triton_dist/layers/nvidia/: ep_a2a_fused_layer.py  ep_a2a_layer.py  tp_attn.py
python/triton_dist/models/: engine.py
python/triton_dist/test/: utils.py
python/triton_dist/test/amd/: test_ag_gemm_intra_node.py  test_allgather.py  test_bandwidth.py  test_e2e_inference.py  test_language_extra.py  test_matmul_amd.py  test_tp_attn.py  test_tp_mlp.py
python/triton_dist/test/metax/: launch.sh  launch_inter_node.sh  launch_single_device.sh  run_dist_tests.sh  test_ag_gemm_inter_node.py  test_ag_gemm_intra_node.py  test_common_ops.py  test_distributed_wait.py  test_utils.py
python/triton_dist/test/nvidia/: test_ag_gemm.py  test_all_gather.py  test_all_to_all_single_gemm.py  test_ep_moe_fused.py  test_gemm_ar.py  test_gemm_rs.py  test_sp_decode_attn.py  test_tp_attn.py  test_tp_mlp.py  test_tp_moe.py
python/triton_dist/tools/: gen_amd_libdevice_extra.py
python/triton_dist/tools/profiler/: context.py  language.py  viewer.py
python/triton_dist/tools/tune/: tune_gemm.py
scripts/: build_e2e_env.sh  setenv.sh
shmem/mxshmem_bind/: build.sh
shmem/mxshmem_bind/pymxshmem/: CMakeLists.txt  setup.py
shmem/mxshmem_bind/pymxshmem/example/: run.sh  run_ring_put.py
shmem/mxshmem_bind/pymxshmem/python/_pymxshmem/: __init__.pyi
shmem/mxshmem_bind/pymxshmem/python/pymxshmem/: __init__.py
shmem/mxshmem_bind/pymxshmem/src/: flush_l2c.cu  pymxshmem.cc
unittest/: test_triton_tuple_input.py
